# ParallelComputing

./: .gitignore  CMakeLists.txt  README.md
coursework/: CMakeLists.txt  FPGA implementation of neruo-fuzzy system with improved PSO learning.pptx  LogBook.docx  Makefile  README  README.md  Sketches.pptx
coursework/src/: CMakeLists.txt  Makefile  README.md  encrypt.sh  toEncrypt.txt
coursework/src/binLib/: CMakeLists.txt  pc1.cpp
coursework/src/etc/: CMakeLists.txt  courseworkHandler.cpp  courseworkHandler.h  decipherAgent.cpp  decipherAgent.h  decipherAgentHandler.cpp  decipherAgentHandler.h  key.cpp  key.h  keySegment.cpp  keySegment.h  solutionGenerator.cpp  solutionGenerator.h  solutionHandler.cpp  solutionHandler.h  threadHandler.cpp  threadHandler.h
coursework/src/etc/key/: key.cpp  key.h  keySegment.h
coursework/src/etc/readerWriter/: encipheredTextReader.cpp  encipheredTextReader.h
coursework/src/etc/ssl/: cipherAgent.cpp  cipherAgent.h  cipherAgentHandler.cpp  cipherAgentHandler.h  cipherDoer.cpp  cipherDoer.h  decipherAgent.cpp  decipherAgent.h  decipherAgentHandler.cpp  decipherDoer.cpp  decipherDoer.h
include/: fileHandling.h  timer.h
src/: fileHandling.c  timer.c
test/: blah  encrypted_file  thredIndexTest.c
week1/: CMakeLists.txt  a.out  ex1.c
week2/: CMakeLists.txt  ex2.c
week3/: ASudoku  CMakeLists.txt  ex3.c  sudokuFileHandler.c  sudokuFileHandler.h  sudokuUtility.c  sudokuUtility.h
week3/sudokubkp/: BSudoku  CSudoku
week4/: CMakeLists.txt  grades.txt  hello.c  histogram.c
week5/: CMakeLists.txt  matrix2.c  pi.c
